fix Bug 119167: page rendered incorrectly at larger font sizes

see the comment within for info

BUG:119167

now I'm gonna need to find some gauze and stop the blood from gushing out of my eyes and ears.


svn path=/branches/KDE/3.5/kdelibs/; revision=590440